<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DegreeWeather</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_location">Location</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="pre_location">Edit Location</string>
    <string name="pre_location_summary">Select your location to display the weather</string>
    <string name="pre_about">About</string>
    <string name="net_dialog_title">No available network</string>
    <string name="net_dialog_message">Set the network settings?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="gps_error">gps location failed,press back to exit!</string>
    <string name="activity_select">select location</string>
    <string name="no_results_now">no result</string>
    <string name="yestoday">Yestoday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="dayaftertomorrow">Next</string>
    <string name="btn_check">check update</string>
    <string name="btn_evaluation">evaluation app</string>
    <string name="dlg_ok">Ok</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_message">Exit App?</string>
    <string name="press_again_exit">click again to exit!</string>
    <string name="toast_db_not_exist">Database not exits! Please try again.</string>
    <string name="toast_db_copy_failed">Copy db file failed! Please try again.</string>
    <string name="toast_update_failed">Update failed</string>
    <string name="tv_max_temperature">Max temp</string>
    <string name="tv_min_temperature">Min temp</string>
    <string name="widget_first">Please click here to get weather info</string>


    <string-array name="drawer_titles">
        <item>Live</item>
        <item>Trends</item>
        <item>Settings</item>
    </string-array>

</resources>
