<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >
        <LinearLayout
            android:id="@+id/trends_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/fragment_margin_top">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/trends_city"
                    android:textSize="30.0sp"
                    android:textColor="#ffffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/trends_p_time"
                    android:textSize="20.0sp"
                    android:textColor="#ffffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@+id/trends_city"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40.0dip">
                <TextView
                    android:id="@+id/trends_left_1"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yestoday"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/trends_middle_1"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@id/trends_left_1"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/trends_right_1"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@id/trends_left_1"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
                <View
                    android:id="@+id/line_1"
                    android:background="@android:color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_marginTop="15.0dip"
                    android:layout_marginBottom="15dip"
                    android:layout_below="@id/trends_left_1" />

                <TextView
                    android:id="@+id/trends_left_2"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/line_1"/>

                <TextView
                    android:id="@+id/trends_middle_2"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@id/trends_left_2"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/trends_right_2"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@id/trends_left_2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
                <View
                    android:id="@+id/line_2"
                    android:background="@android:color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_marginTop="15.0dip"
                    android:layout_marginBottom="15dip"
                    android:layout_below="@id/trends_left_2" />

                <TextView
                    android:id="@+id/trends_left_3"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomorrow"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/line_2"/>

                <TextView
                    android:id="@+id/trends_middle_3"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@id/trends_left_3"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/trends_right_3"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@id/trends_left_3"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
                <View
                    android:id="@+id/line_3"
                    android:background="@android:color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_marginTop="15.0dip"
                    android:layout_marginBottom="15dip"
                    android:layout_below="@id/trends_left_3" />

                <TextView
                    android:id="@+id/trends_left_4"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dayaftertomorrow"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/line_3"/>

                <TextView
                    android:id="@+id/trends_middle_4"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@id/trends_left_4"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/trends_right_4"
                    android:textSize="@dimen/trends_text_size"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_now"
                    android:layout_alignBaseline="@id/trends_left_4"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
                <View
                    android:id="@+id/line_4"
                    android:background="@android:color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_marginTop="15.0dip"
                    android:layout_marginBottom="15dip"
                    android:layout_below="@id/trends_left_4" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>